backplane-api/deploy/testdata/zz_fixture_TestHelmTemplate_backplane_api_dev.yaml
---
# Source: backplane-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'backplane-api-dev-backplane-api'
  labels:
    app.kubernetes.io/name: 'backplane-api'
    helm.sh/chart: 'backplane-api-1.0.0'
    app.kubernetes.io/instance: 'backplane-api-dev'
    app.kubernetes.io/managed-by: 'Helm'
spec:
  selector:
    app.kubernetes.io/name: 'backplane-api'
    app.kubernetes.io/instance: 'backplane-api-dev'
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
# Source: backplane-api/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: 'backplane-api-dev'
spec:
  serviceName: 'backplane-api-dev'
  replicas: 2
  podManagementPolicy: 'Parallel'
  revisionHistoryLimit: '10'
  updateStrategy:
    type: 'RollingUpdate'
  selector:
    matchLabels:
      app: 'backplane-api-dev'
  template:
    metadata:
      labels:
        app: backplane-api
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: 'backplane-api'
      containers:
      - name: backplane-api
        image: ""
---
# Source: backplane-api/templates/allow-backplane-api.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-backplane-api
  namespace: aro-hcp
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/aro-hcp/sa/frontend"
        - "cluster.local/ns/aro-hcp/sa/backplane-api"
        - "cluster.local/ns/aro-hcp/sa/backplane-verify-serviceaccount"
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
        paths: ["/backplane/*"]
---
# Source: backplane-api/templates/allow-nothing.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: aro-hcp
spec: {}
